force-app/main/default/objects/Dish__c/Dish__c.object-meta.xml
<CustomObject>
    <label>Dish</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Dish Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dishes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>