force-app/main/default/objects/Dish__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Title__c</columns>
    <columns>Category__c</columns>
    <columns>Subcategory__c</columns>
    <columns>Description__c</columns>
    <columns>Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>