force-app/main/default/objects/Dish__c/listViews/Dishes.listView-meta.xml
<ListView>
    <fullName>Dishes</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Dishes</label>
</ListView>